<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity2"
    android:background="@color/black"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navigation_bottom"
        android:background="@color/primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="232dp"
                    android:src="@drawable/news_img"
                    android:scaleType="fitStart"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:orientation="vertical"
                    android:paddingVertical="20dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/news_title"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp">

                        <TextView
                            android:id="@+id/news_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/news_date"
                            android:textColor="@color/disabled"
                            android:textSize="13sp"/>

                        <TextView
                            android:layout_toRightOf="@id/news_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/news_category"
                            android:textColor="@color/secondary"
                            android:textSize="13sp"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/news_01"
                        android:textColor="@color/whitesmoke"
                        android:paddingTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/news_02"
                        android:textSize="15sp"
                        android:textColor="@color/whitesmoke"
                        android:paddingTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/news_03"
                        android:textSize="15sp"
                        android:textColor="@color/whitesmoke"
                        android:paddingTop="10dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/news_04"
                        android:textSize="15sp"
                        android:textColor="@color/whitesmoke"
                        android:paddingTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/news_05"
                        android:textSize="15sp"
                        android:textColor="@color/whitesmoke"
                        android:paddingTop="10dp"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:src="@drawable/news_img_2"
                        android:scaleType="fitXY"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/news_06"
                        android:textSize="15sp"
                        android:textColor="@color/whitesmoke"
                        android:paddingTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/news_07"
                        android:textColor="@color/whitesmoke"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>




    </ScrollView>

    <LinearLayout
        android:id="@+id/navigation_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            android:textColor="@color/disabled"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/ic_baseline_home_24"
            app:iconGravity="top"
            app:iconTint="@color/disabled"
            android:paddingHorizontal="10dp"
            android:onClick="to_Home_2"
            />

        <Button
            android:id="@+id/newsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="News"
            android:textColor="@color/secondary"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/ic_baseline_menu_book_24"
            app:iconGravity="top"
            app:iconTint="@color/secondary"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="40dp"
            />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textColor="@color/disabled"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/ic_baseline_account_circle_24"
            app:iconGravity="top"
            app:iconTint="@color/disabled"
            android:paddingHorizontal="10dp"
            android:onClick="to_Profile_2"
            />

    </LinearLayout>

</RelativeLayout>