<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/black"
    >

    <LinearLayout
        android:id="@+id/linear01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/black"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        >

        <ImageView
            android:layout_width="143dp"
            android:layout_height="38dp"
            android:background="@drawable/logo"
            android:contentDescription="TODO" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear01"
        android:layout_above="@id/navigation_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_head"
                android:layout_marginLeft="20dp"
                android:textSize="27sp"
                android:textColor="@color/whitesmoke"
                android:layout_marginStart="20dp"
                android:textAppearance="?attr/textAppearanceHeadline6"/>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="25dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label"
                    app:startIconDrawable="@drawable/ic_baseline_search_24"
                    android:background="@color/whitesmoke"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/primary"
                    android:onClick="to_News_1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- Media -->
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="194dp"
                            app:srcCompat="@drawable/news_img"
                            android:scaleType="centerCrop"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <!-- Title, secondary and supporting text -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/news_category"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="@color/secondary"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/news_title"
                                android:textAppearance="?attr/textAppearanceHeadline6"
                                android:textColor="@color/whitesmoke"
                                />

                        </LinearLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

        </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:id="@+id/navigation_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            android:textColor="@color/secondary"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/ic_baseline_home_24"
            app:iconGravity="top"
            app:iconTint="@color/secondary"
            android:paddingHorizontal="10dp"
            />

        <Button
            android:id="@+id/newsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="News"
            android:textColor="@color/disabled"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/ic_baseline_menu_book_24"
            app:iconGravity="top"
            app:iconTint="@color/disabled"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="40dp"
            android:onClick="to_News_1"
            />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textColor="@color/disabled"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/ic_baseline_account_circle_24"
            app:iconGravity="top"
            app:iconTint="@color/disabled"
            android:paddingHorizontal="10dp"
            android:onClick="to_Profile_1"
            />

    </LinearLayout>

</RelativeLayout>