<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity3"
    android:background="@color/primary"
    >

    <LinearLayout
        android:id="@+id/linear01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primary"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="143dp"
            android:layout_height="38dp"
            android:background="@drawable/logo"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/primary"
                app:strokeWidth="4sp"
                >

                <ImageView
                    android:id="@+id/profile_image"
                    android:src="@drawable/profile_image"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:contentDescription="TODO">
                </ImageView>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_field"
                android:textSize="30sp"
                android:fontFamily="monospace"
                android:textColor="@color/whitesmoke"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="17sp"
                android:text="19, Male"
                android:textColor="@color/whitesmoke"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/student_id_card"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="@color/whitesmoke"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Student ID"
                            android:textSize="12sp"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/id_student_field"
                            android:textSize="17sp"
                            android:textColor="@color/primary"
                            />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/birthplace_card"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="@color/whitesmoke"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Birthplace"
                            android:textSize="12sp"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/birthplace_field"
                            android:textSize="17sp"
                            android:textColor="@color/primary"
                            />

                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    android:layout_toRightOf="@id/birthplace_card"
                    app:cardBackgroundColor="@color/whitesmoke"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Motto"
                            android:textSize="12sp"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/motto"
                            android:textSize="17sp"
                            android:textColor="@color/primary"
                            />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/navigation_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            android:textColor="@color/disabled"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/ic_baseline_home_24"
            app:iconGravity="top"
            app:iconTint="@color/disabled"
            android:paddingHorizontal="10dp"
            android:onClick="to_Home_3"
            />

        <Button
            android:id="@+id/newsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="News"
            android:textColor="@color/disabled"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/ic_baseline_menu_book_24"
            app:iconGravity="top"
            app:iconTint="@color/disabled"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="40dp"
            android:onClick="to_News_3"
            />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textColor="@color/secondary"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/ic_baseline_account_circle_24"
            app:iconGravity="top"
            app:iconTint="@color/secondary"
            android:paddingHorizontal="10dp"
            />

    </LinearLayout>

</RelativeLayout>